## Process this file with automake to produce Makefile.in
## Created by Anjuta

## The main script
## Directory where .class files will be installed
garmondir = $(pythondir)/garmon

garmon_PYTHON = \
	prefs.py \
	plugin.py \
	plugin_manager.py \
	trouble_codes.py \
	pyconsole.py \
	backdoor.py \
	sensor.py \
	property_object.py \
	scheduler.py \
	widgets.py \
	obd_device.py \
	__init__.py \
	garmon_app.py \
	defs.py \
        acura_codes.py\
        audi_codes.py\
        bmw_codes.py\
        chevrolet_codes.py\
        chrysler_codes.py\
        ford_codes.py\
        honda_codes.py\
        hyundai_codes.py\
        infiniti_codes.py\
        isuzu_codes.py\
        jaguar_codes.py\
        kia_codes.py\
        land_rover_codes.py\
        lexus_codes.py\
        mazda_codes.py\
        mitsubishi_codes.py\
        nissan_codes.py\
        subaru_codes.py\
        toyota_codes.py\
        volkswagen_codes.py

bin_SCRIPTS=garmon

EXTRA_DIST = $(bin_SCRIPTS)
